# page-generator

page_generator/: README.md  pyproject.toml
page_generator/src/page_generator/: crew.py  main.py
page_generator/src/page_generator/config/: agents.yaml  tasks.yaml
